Successful decompilation & recompilation #56